[package]
name = "ejson2env"
version = "0.0.1"
edition = "2021"
authors = ["Trung Lê <8@tle.id.au>"]
description = "Export environment variables from EJSON files"
license = "MIT"
repository = "https://github.com/runlevel5/ejson2env-rs"
keywords = ["encryption", "secrets", "ejson", "environment"]
categories = ["command-line-utilities"]

[dependencies]
# EJSON library for decryption
ejson = { git = "https://github.com/runlevel5/ejson-rs", tag = "v0.0.6" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# JSON parsing
serde_json = "1.0"

# YAML parsing
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex for identifier validation
regex = "1.12"

# For lazy_static regex
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.24"

[[bin]]
name = "ejson2env"
path = "src/main.rs"

[lib]
name = "ejson2env"
path = "src/lib.rs"
