[package]
name = "ejson2env"
version = "0.0.9"
edition = "2021"
authors = ["Trung Lê <8@tle.id.au>"]
description = "Export environment variables from EJSON, EYAML, and ETOML files"
license = "MIT"
repository = "https://github.com/runlevel5/ejson2env-rs"
keywords = ["secrets", "ejson", "eyaml", "etoml", "environment"]
categories = ["command-line-utilities"]

[dependencies]
# EJSON library for decryption
ejson = { git = "https://github.com/runlevel5/ejson-rs", tag = "v0.0.10" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# JSON parsing
serde_json = "1.0"

# YAML parsing
serde_yml = "0.0.12"

# TOML parsing
toml = "0.8"

# Error handling
thiserror = "2.0"

# Regex for identifier validation
regex = "1.12"

# Secure memory handling (zeroize secrets)
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24"

[[bin]]
name = "ejson2env"
path = "src/main.rs"

[lib]
name = "ejson2env"
path = "src/lib.rs"
