[package]
name = "ejson2env"
version = "0.0.11"
edition = "2021"
rust-version = "1.80"
authors = ["Trung Lê <8@tle.id.au>"]
description = "Export environment variables from EJSON, EYAML, and ETOML files"
license = "MIT"
repository = "https://github.com/runlevel5/ejson2env-rs"
keywords = ["secrets", "ejson", "eyaml", "etoml", "environment"]
categories = ["command-line-utilities"]

[dependencies]
# EJSON library for decryption
ejson = { git = "https://github.com/runlevel5/ejson-rs", tag = "v0.0.15" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"

# Secure memory handling (zeroize secrets)
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
# JSON parsing (for tests)
serde_json = "1.0"

# YAML parsing (for tests)
serde_norway = "0.9"

# TOML parsing (for tests)
toml = "0.9"

[[bin]]
name = "ejson2env"
path = "src/main.rs"

[lib]
name = "ejson2env"
path = "src/lib.rs"
